--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -26,6 +26,8 @@ jobs:
       - name: Build
         run: |
           npm ci
+          npm set-script build "next build"
+          npm set-script export "next export"
           npm run build
           npm run export
           touch out/.nojekyll
